Styling for button press bubbles. Moved bubbles to edge of button to avoid overlap.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -22,7 +22,7 @@
 } */
 
 .btn-gradient-transition {
-    background-color: rgba(248, 248, 248, 0.5);;
+    background-color: rgba(248, 248, 248, 0.5);
 }
 
 .btn-gradient:before,
@@ -40,7 +40,7 @@
 
 .btn-gradient:before {
     display: none;
-    top: -75%;
+    top: -85%;
     background-image: radial-gradient(circle, #F8F8F8 20%, transparent 20%),
     radial-gradient(circle, transparent 20%, #F8F8F8 20%, transparent 30%),
     radial-gradient(circle, #F8F8F8 20%, transparent 20%),
@@ -55,7 +55,7 @@
 
 .btn-gradient:after {
     display: none;
-    bottom: -75%;
+    bottom: -99%;
     background-image: radial-gradient(circle, #F8F8F8 20%, transparent 20%),
     radial-gradient(circle, #F8F8F8 20%, transparent 20%),
     radial-gradient(circle, transparent 10%, #F8F8F8 15%, transparent 20%),
@@ -90,12 +90,12 @@
 
 @keyframes bottomBubbles {
     0%{
-        background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+        background-position: 10% 0%, 30% 10%, 55% -10%, 70% -10%, 85% 0%, 70% -10%, 70% 0%;
     }
     50% {
-        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;}
+        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 70%, 75% 70%, 95% 60%, 105% 0%;}
     100% {
-        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 80%, 75% 80%, 95% 70%, 110% 10%;
         background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
     }
 }
